# beehAIve

./: README.md  bot.py  config.py  conversation_mode.py  discord_bot.py  index.html  package.json  personality_profile.py  pyproject.toml  render.yaml  replit.md  telegram_bot.py
builder/: autonomous_builder.py  no_limit_solver.py
colmena/: monitor.py
core/: ai_chat.py  logger.py  state.py
crypto/: analysis.py  price_feed.py  wallet_manager.py
css/: style.css
docs/: BEEA_APIS.md  BEEA_GUIA_COMPLETA.md  BEEA_MONETIZACION.md  BEEA_PRESENTACION.md
inputs/: README.md
js/: app.js  auth.js  branding.js  chat.js  config.js  export.js  gallery.js  plan-analyzer.js  render.js  scene-builder.js  scene-exterior.js  scene-furniture.js  scene-materials.js  scene-rooms.js  search.js  showroom-publish.js  showroom-templates.js  style-wizard.js  tour.js  units.js
memory/: auto_learner.py  knowledge_base.py  learning_engine.py  long_memory.py  memory_store.py  shared_knowledge.py
outputs/: README.md
swarm/: agent_worker.py  autonomous_loop.py  bee_identity.py  bee_roles.py  bee_tools.py  bee_trainer.py  hivemind.py  role_templates.py  swarm_manager.py
tools/: browser_tool.py  bypass_engine.py  capabilities.py  code_sandbox.py  execution.py  file_handler.py  file_processor.py  free_providers.py  ghost_mode.py  image_gen.py  image_providers.py  img2img.py  key_hunter.py  llm_adapter.py  media_generator.py  panel_app.py  pdf_reader.py  preview_manager.py  project_status.py  qr_generator.py  reminder.py  research.py  scheduler.py  self_healer.py  self_modify.py  tts.py  (+9 more)
(+10 files in other folders)
